apps/test/trace-generator.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k6-trace-generator
  namespace: monitoring
  labels:
    app: k6-trace-generator
spec:
  replicas: 1
  selector:
    matchLabels:
      app: k6-trace-generator
  template:
    metadata:
      labels:
        app: k6-trace-generator
    spec:
      containers:
        - name: k6-tracing
          image: ghcr.io/grafana/xk6-client-tracing:v0.0.7
          env:
            - name: ENDPOINT
              value: "alloy:4317"  # Send traces to Alloy OTLP endpoint
          resources:
            limits:
              cpu: 200m
              memory: 256Mi
            requests:
              cpu: 100m
              memory: 128Mi
      restartPolicy: Always

---
apiVersion: v1
kind: Service
metadata:
  name: k6-trace-generator
  namespace: monitoring
spec:
  type: NodePort
  selector:
    app: k6-trace-generator
  ports:
    - protocol: TCP
      port: 8080         # The internal cluster port for the service
      targetPort: 8080 # The actual HTTP port your application process listens on
      nodePort: 30090  # The local port you will type into your browser (range: 30000-32767)
